kubeTp3/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: wordpress
  name: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: wordpress
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
          convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/wp_net: "true"
        io.kompose.service: wordpress
    spec:
      containers:
      - env:
        - name: WORDPRESS_DB_HOST
          value: db
        - name: WORDPRESS_DB_NAME
          value: exampledb
        - name: WORDPRESS_DB_PASSWORD
          value: examplepass
        - name: WORDPRESS_DB_USER
          value: exampleuser
        image: wordpress
        imagePullPolicy: ""
        name: wordpress
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
        - mountPath: /var/www/html
          name: wpapp-data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: wpapp-data
        persistentVolumeClaim:
          claimName: wpapp-data
status: {}
