kubeTp3/wp_net-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: wp_net
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/wp_net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/wp_net: "true"
